# FiddleFaddleFlop

./: .gitpod.yml  README.md  pyproject.toml
core/: __main__.py  game.py
