[tool.poetry]
name = "fiddlefaddleflop"
version = "0.1.0"
description = "The popular math game implemented in Python (Computer vs Human)"
authors = ["GrandMoff100 <minecraftcrusher100@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
rich-click = "^1.2.1"

[tool.poetry.dev-dependencies]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
